--- a/debian/control
+++ b/debian/control
@@ -1,15 +1,18 @@
-Source: template-repository
-Section: unknown
+Source: ncdu
+Section: admin
 Priority: optional
-Maintainer: Tsic404 <liuheng@deepin.org>
-Build-Depends: debhelper (>= 11)
-Standards-Version: 4.1.3
-Homepage: https://github.com/deepin-community/template-repository
-#Vcs-Browser: https://salsa.debian.org/debian/deepin-community-template-repository
-#Vcs-Git: https://salsa.debian.org/debian/deepin-community-template-repository.git
+Maintainer: xiangzelong <xiangzelong@deepin.org>
+Build-Depends: debhelper-compat (= 13),
+               libncurses-dev,
+               pkg-config
+Rules-Requires-Root: no
+Standards-Version: 4.6.2
+Homepage: https://dev.yorhel.nl/ncdu/
 
-Package: template-repository
+Package: ncdu
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: <insert up to 60 chars description>
- <insert long description, indented with spaces>
+Description: ncurses disk usage viewer
+ Ncdu is a ncurses-based du viewer. It provides a fast and easy-to-use interface
+ through famous du utility. It allows one to browse through the directories and
+ show percentages of disk usage with ncurses library.
