--- a/debian/control
+++ b/debian/control
@@ -1,13 +1,15 @@
 Source: ncdu
 Section: admin
 Priority: optional
-Maintainer: xiangzelong <xiangzelong@deepin.org>
+Maintainer: Christian Göttsche <cgzones@googlemail.com>
 Build-Depends: debhelper-compat (= 13),
                libncurses-dev,
-               pkg-config
+               pkgconf
 Rules-Requires-Root: no
-Standards-Version: 4.6.2
+Standards-Version: 4.7.2
 Homepage: https://dev.yorhel.nl/ncdu/
+Vcs-Git: https://salsa.debian.org/cgzones/ncdu.git
+Vcs-Browser: https://salsa.debian.org/cgzones/ncdu
 
 Package: ncdu
 Architecture: any
